--- a/index.html
+++ b/index.html
@@ -2906,26 +2906,36 @@ ${pad(beforeLine2,22)}${afterLine2}`;
       const rows = _currentSystem.keys;
 
       let html = '';
-      html += '<div style="max-height:60vh;overflow:auto;">';
-      html += '  <div class="keygrid">';
-      html += '    <div class="hdr muted">Stamping</div>';
-      html += '    <div class="hdr muted">Description</div>';
-      html += '    <div class="hdr muted">Code</div>';
-      html += '    <div class="hdr muted">Qty</div>';
-      html += '  </div>';
-      html += '  <div id="keyRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
-      html += '</div>';
+        html += '<div style="max-height:60vh;overflow:auto;">';
+        html += '  <div class="keygrid">';
+        html += '    <div class="hdr muted">Stamping</div>';
+        html += '    <div class="hdr muted">Description</div>';
+        html += '    <div class="hdr muted">Code</div>';
+        html += '    <div class="hdr muted">Qty</div>';
+        html += '  </div>';
+        html += '  <div id="keyRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
+        html += '</div>';
 
+        /* add a visual gap below the scrollable list */
+        html += '<div style="height:12px;"></div>';
 
-       html += `
-         <div class="btnbar" style="justify-content:flex-end;position:sticky;bottom:0;background:#0e0e0e;padding:12px;border-radius:12px;margin-top:12px;">
-           ${rows.length === 0 ? '<button id="keyFastBuild" class="primary">Fast Build</button>' : ''}
-           <button id="keyAdd">Add</button>
-           <button id="keyEdit" disabled>Edit</button>
-           <button id="keyCut" disabled>Cut Keys</button>
-           <button id="keyDelete" class="warn" disabled>Delete Key</button>
-         </div>
-       `;
+        html += `
+          <div class="btnbar"
+               style="justify-content:flex-end;
+                      position:sticky;
+                      bottom:0;
+                      background:#0e0e0e;
+                      padding:12px;
+                      border-radius:12px;
+                      margin-top:12px;">
+            ${rows.length === 0 ? '<button id="keyFastBuild" class="primary">Fast Build</button>' : ''}
+            <button id="keyAdd">Add</button>
+            <button id="keyEdit" disabled>Edit</button>
+            <button id="keyCut" disabled>Cut Keys</button>
+            <button id="keyDelete" class="warn" disabled>Delete Key</button>
+          </div>
+        `;
+
 
       content.innerHTML = html;
 
