--- a/index.html
+++ b/index.html
@@ -2903,29 +2903,34 @@ ${pad(beforeLine2,22)}${afterLine2}`;
       const content = document.getElementById('systemContent');
       if (!content) return;
 
-      const rows = _currentSystem.keys;
+       const rows = _currentSystem.keys;
 
-        let html = '';
-        html += '<div style="max-height:60vh;overflow:auto;background:#060606;border:1px solid #101010;border-radius:12px;padding:12px;">';
-        html += '  <div class="keygrid">';
-        html += '    <div class="hdr muted">Stamping</div>';
-        html += '    <div class="hdr muted">Description</div>';
-        html += '    <div class="hdr muted">Code</div>';
-        html += '    <div class="hdr muted">Qty</div>';
-        html += '  </div>';
-        html += '  <div id="keyRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
-        html += '</div>';
+       let html = '';
+       // BOX 1: scrollable keys window
+       html += '<div class="card" style="padding:12px;margin:12px 0;">';
+       html += '  <div style="max-height:60vh;overflow:auto;">';
+       html += '    <div class="keygrid">';
+       html += '      <div class="hdr muted">Stamping</div>';
+       html += '      <div class="hdr muted">Description</div>';
+       html += '      <div class="hdr muted">Code</div>';
+       html += '      <div class="hdr muted">Qty</div>';
+       html += '    </div>';
+       html += '    <div id="keyRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
+       html += '  </div>';
+       html += '</div>';
 
-
-        html += `
-          <div class="btnbar" style="justify-content:flex-end;position:sticky;bottom:0;background:#0e0e0e;padding:12px;border-radius:12px;margin-top:16px;">
-            ${rows.length === 0 ? '<button id="keyFastBuild" class="primary">Fast Build</button>' : ''}
-            <button id="keyAdd">Add</button>
-            <button id="keyEdit" disabled>Edit</button>
-            <button id="keyCut" disabled>Cut Keys</button>
-            <button id="keyDelete" class="warn" disabled>Delete Key</button>
-          </div>
-        `;
+       // BOX 2: bottom buttons in their own card
+       html += `
+         <div class="card" style="padding:12px;margin:12px 0;">
+           <div class="btnbar" style="justify-content:flex-end;margin-top:0;">
+             ${rows.length === 0 ? '<button id="keyFastBuild" class="primary">Fast Build</button>' : ''}
+             <button id="keyAdd">Add</button>
+             <button id="keyEdit" disabled>Edit</button>
+             <button id="keyCut" disabled>Cut Keys</button>
+             <button id="keyDelete" class="warn" disabled>Delete Key</button>
+           </div>
+         </div>
+       `;
 
 
       content.innerHTML = html;
