--- a/index.html
+++ b/index.html
@@ -2068,7 +2068,27 @@ ${pad(beforeLine2,22)}${afterLine2}`;
         [btnKeys, btnDoors, btnTree, btnNotes, btnKeying, btnCodingCheck]
           .forEach(b=>b && b.classList.remove('active'));
         if (map[name]) map[name].classList.add('active');
+
+        const content = document.getElementById('systemContent');
+        if (content){
+          if (name === 'keys'){
+            // Strip chrome so the two inner cards look like separate boxes
+            content.style.background = 'transparent';
+            content.style.border = '0';
+            content.style.boxShadow = 'none';
+            content.style.padding = '0';
+            content.style.minHeight = '0';
+          } else {
+            // Restore normal card look for all other tabs
+            content.style.background = '#0e0e0e';
+            content.style.border = '1px solid #151515';
+            content.style.boxShadow = '0 8px 30px rgba(0,0,0,0.35)';
+            content.style.padding = '16px';
+            content.style.minHeight = '120px';
+          }
+        }
       }
+
 
       if (btnClose) btnClose.onclick = () => {
         _currentSystem = null;
@@ -2897,203 +2917,196 @@ ${pad(beforeLine2,22)}${afterLine2}`;
        modal.hidden = false;
      }
 
-     function renderKeysView(){
-       if (!_currentSystem) return;
-      ensureKeysArray();
-      const content = document.getElementById('systemContent');
-      if (!content) return;
+      function renderKeysView(){
+        if (!_currentSystem) return;
+        ensureKeysArray();
+        const content = document.getElementById('systemContent');
+        if (!content) return;
 
-       const rows = _currentSystem.keys;
+        const rows = _currentSystem.keys;
 
-       let html = '';
-       // BOX 1: scrollable keys window
-       html += '<div class="card" style="padding:12px;margin:12px 0;">';
-       html += '  <div style="max-height:60vh;overflow:auto;">';
-       html += '    <div class="keygrid">';
-       html += '      <div class="hdr muted">Stamping</div>';
-       html += '      <div class="hdr muted">Description</div>';
-       html += '      <div class="hdr muted">Code</div>';
-       html += '      <div class="hdr muted">Qty</div>';
-       html += '    </div>';
-       html += '    <div id="keyRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
-       html += '  </div>';
-       html += '</div>';
+        let html = '';
 
-       // BOX 2: bottom buttons in their own card
-       html += `
-         <div class="card" style="padding:12px;margin:12px 0;">
-           <div class="btnbar" style="justify-content:flex-end;margin-top:0;">
-             ${rows.length === 0 ? '<button id="keyFastBuild" class="primary">Fast Build</button>' : ''}
-             <button id="keyAdd">Add</button>
-             <button id="keyEdit" disabled>Edit</button>
-             <button id="keyCut" disabled>Cut Keys</button>
-             <button id="keyDelete" class="warn" disabled>Delete Key</button>
-           </div>
-         </div>
-       `;
+        // BOX 1: scrollable keys window (own card, like the top content card)
+        html += '<div class="card" style="padding:12px;margin:12px 0;">';
+        html += '  <div style="max-height:60vh;overflow:auto;">';
+        html += '    <div class="keygrid">';
+        html += '      <div class="hdr muted">Stamping</div>';
+        html += '      <div class="hdr muted">Description</div>';
+        html += '      <div class="hdr muted">Code</div>';
+        html += '      <div class="hdr muted">Qty</div>';
+        html += '    </div>';
+        html += '    <div id="keyRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
+        html += '  </div>';
+        html += '</div>';
 
+        // BOX 2: bottom buttons in their own card, like the top buttons card
+        html += `
+          <div class="card" style="padding:12px;margin:12px 0;">
+            <div class="btnbar" style="justify-content:flex-end;margin-top:0;">
+              ${rows.length === 0 ? '<button id="keyFastBuild" class="primary">Fast Build</button>' : ''}
+              <button id="keyAdd">Add</button>
+              <button id="keyEdit" disabled>Edit</button>
+              <button id="keyCut" disabled>Cut Keys</button>
+              <button id="keyDelete" class="warn" disabled>Delete Key</button>
+            </div>
+          </div>
+        `;
 
-      content.innerHTML = html;
+        content.innerHTML = html;
 
-       const rowsHost = document.getElementById('keyRows');
-       rowsHost.innerHTML = rows.map((k, idx) => {
-         return (
-           '<button type="button" class="keyrow" data-idx="'+idx+'">' +
-             '<div class="keycell">'+(k.stamping||'')+'</div>' +
-             '<div class="keycell">'+(k.description||'')+'</div>' +
-             '<div class="keycell">'+(k.code||'')+'</div>' +
-             '<div class="keycell qty">'+((k.qty||0))+'</div>' +
-           '</button>'
-         );
-       }).join('');
+        const rowsHost = document.getElementById('keyRows');
+        rowsHost.innerHTML = rows.map((k, idx) => {
+          return (
+            '<button type="button" class="keyrow" data-idx="'+idx+'">' +
+              '<div class="keycell">'+(k.stamping||'')+'</div>' +
+              '<div class="keycell">'+(k.description||'')+'</div>' +
+              '<div class="keycell">'+(k.code||'')+'</div>' +
+              '<div class="keycell qty">'+((k.qty!=null?k.qty:'')||'')+'</div>' +
+            '</button>'
+          );
+        }).join('');
 
-       const btnFast = document.getElementById('keyFastBuild');
-       if (btnFast) {
-         btnFast.onclick = () => {
-           openFastBuildModal();
-         };
-       }
+        let selectedIdx = _keysSelectedIdx;
 
+        function syncSelection(){
+          const all = rowsHost.querySelectorAll('.keyrow');
+          all.forEach(btn => {
+            const i = Number(btn.dataset.idx);
+            btn.classList.toggle('selected', i === selectedIdx);
+          });
 
-      let selectedIdx = (_keysSelectedIdx >= 0 && _keysSelectedIdx < rows.length) ? _keysSelectedIdx : -1;
-      const rowEls = Array.from(rowsHost.querySelectorAll('.keyrow'));
-      const btnEdit = document.getElementById('keyEdit');
-      const btnCut  = document.getElementById('keyCut');
-      const btnDel  = document.getElementById('keyDelete');
+          const btnEdit   = document.getElementById('keyEdit');
+          const btnCut    = document.getElementById('keyCut');
+          const btnDelete = document.getElementById('keyDelete');
 
-      function selectRow(el){
-        rowEls.forEach(r => r.classList.remove('selected'));
-        el.classList.add('selected');
-        selectedIdx = parseInt(el.getAttribute('data-idx'), 10);
-        _keysSelectedIdx = selectedIdx;   // persist selection
-        btnEdit.disabled = false;
-        btnCut.disabled  = false;
-        btnDel.disabled  = false;
-      }
+          const hasSel = selectedIdx >= 0;
 
-      rowEls.forEach(el=>{
-        el.onclick = ()=>selectRow(el);
-      });
-
-      // re-apply previous selection after render
-      if (selectedIdx >= 0 && rowEls[selectedIdx]) {
-        const el = rowEls[selectedIdx];
-        selectRow(el);
-        el.scrollIntoView({ block: "nearest" });
-      }
-
-
-
-      document.getElementById('keyAdd').onclick = ()=>{
-        _editingKeyIndex = null;
-
-        let baseStamp = '';
-        if (_keysSelectedIdx >= 0 && _currentSystem && Array.isArray(_currentSystem.keys) && _currentSystem.keys[_keysSelectedIdx]) {
-          baseStamp = _currentSystem.keys[_keysSelectedIdx].stamping || '';
-        } else if (_currentSystem && Array.isArray(_currentSystem.keys) && _currentSystem.keys.length) {
-          baseStamp = _currentSystem.keys[_currentSystem.keys.length - 1].stamping || '';
+          if (btnEdit)   btnEdit.disabled   = !hasSel;
+          if (btnCut)    btnCut.disabled    = !hasSel;
+          if (btnDelete) btnDelete.disabled = !hasSel;
         }
 
-        const nextStamp = getNextStamping(baseStamp);
-        openKeyModal({ stamping: nextStamp, description:'', code:'', qty:0 });
-      };
+        syncSelection();
 
+        rowsHost.querySelectorAll('.keyrow').forEach(btn => {
+          btn.onclick = () => {
+            const i = Number(btn.dataset.idx);
+            if (!Number.isFinite(i)) return;
+            selectedIdx = i;
+            _keysSelectedIdx = i;
+            syncSelection();
+          };
+        });
 
-      document.getElementById('keyEdit').onclick = ()=>{
-        if (selectedIdx < 0) return;
-        _editingKeyIndex = selectedIdx;
-        const it = _currentSystem.keys[selectedIdx] || { stamping:'', description:'', code:'', qty:0 };
-        openKeyModal(it);
-      };
-
-      document.getElementById('keyCut').onclick = ()=>{
-        if (selectedIdx < 0) return;
-
-        const m   = document.getElementById('cutKeyModal');
-        const qty = document.getElementById('cutQty');
-        const go  = document.getElementById('cutConfirm');
-        const no  = document.getElementById('cutCancel');
-        const bd  = document.getElementById('cutKeyBackdrop');
-
-        const lab = document.getElementById('cutKeyLabel');
-        const it  = _currentSystem.keys[selectedIdx];
-        lab.textContent = (it && it.stamping) ? it.stamping : '';
-
-        qty.value = '1';
-        m.hidden = false;
-
-        function closeCut(){
-          m.hidden = true;
-          go.onclick = null;
-          no.onclick = null;
-          bd.onclick = null;
+        const fb = document.getElementById('keyFastBuild');
+        if (fb){
+          fb.onclick = () => {
+            openFastBuildModal();
+          };
         }
 
+        document.getElementById('keyAdd').onclick = ()=>{
+          ensureKeysArray();
 
-        no.onclick = closeCut;
-        bd.onclick = closeCut;
-
-       go.onclick = ()=>{
-         const v = Number(qty.value);
-         if (!Number.isFinite(v)) { closeCut(); return; }
-         ensureKeysArray();
-         _currentSystem.keys[selectedIdx].qty =
-           (_currentSystem.keys[selectedIdx].qty||0) + Math.floor(v);
-         if (_currentSystem.keys[selectedIdx].qty < 0)
-           _currentSystem.keys[selectedIdx].qty = 0;
-         persistCurrentSystem();
-         closeCut();
-         renderKeysView();
-       };
-      };
-
-
-      document.getElementById('keyDelete').onclick = ()=>{
-        if (selectedIdx < 0) return;
-        const it = _currentSystem.keys[selectedIdx];
-        if (!it) return;
-
-        const m   = document.getElementById('deleteKeyModal');
-        const ln  = document.getElementById('deleteKeyLine');
-        const go  = document.getElementById('deleteKeyConfirm');
-        const no  = document.getElementById('deleteKeyCancel');
-        const bd  = document.getElementById('deleteKeyBackdrop');
-
-        ln.textContent = (it.stamping||'') + ' – ' + (it.description||'');
-        m.hidden = false;
-
-        function closeDel(){
-          m.hidden = true;
-          go.onclick = null;
-          no.onclick = null;
-          bd.onclick = null;
-        }
-
-        no.onclick = closeDel;
-        bd.onclick = closeDel;
-
-        go.onclick = ()=>{
-          _currentSystem.keys.splice(selectedIdx,1);
-          if (_currentSystem.keys.length > 0) {
-            let nextIdx = selectedIdx - 1;
-            if (nextIdx < 0) {
-              nextIdx = 0;
-            }
-            if (nextIdx >= _currentSystem.keys.length) {
-              nextIdx = _currentSystem.keys.length - 1;
-            }
-            _keysSelectedIdx = nextIdx;
-          } else {
-            _keysSelectedIdx = -1;
+          let baseStamp = '';
+          if (_keysSelectedIdx >= 0 && _currentSystem && Array.isArray(_currentSystem.keys) && _currentSystem.keys[_keysSelectedIdx]) {
+            baseStamp = _currentSystem.keys[_keysSelectedIdx].stamping || '';
+          } else if (_currentSystem && Array.isArray(_currentSystem.keys) && _currentSystem.keys.length) {
+            baseStamp = _currentSystem.keys[_currentSystem.keys.length - 1].stamping || '';
           }
-          persistCurrentSystem();
-          closeDel();
-          renderKeysView();
+
+          const nextStamp = getNextStamping(baseStamp);
+          openKeyModal({ stamping: nextStamp, description:'', code:'', qty:0 });
         };
 
-      };
+        document.getElementById('keyEdit').onclick = ()=>{
+          if (selectedIdx < 0) return;
+          _editingKeyIndex = selectedIdx;
+          const it = _currentSystem.keys[selectedIdx] || { stamping:'', description:'', code:'', qty:0 };
+          openKeyModal(it);
+        };
 
-    }
+        document.getElementById('keyCut').onclick = ()=>{
+          if (selectedIdx < 0) return;
+
+          const m   = document.getElementById('cutKeyModal');
+          const qty = document.getElementById('cutQty');
+          const go  = document.getElementById('cutConfirm');
+          const no  = document.getElementById('cutCancel');
+          const bd  = document.getElementById('cutKeyBackdrop');
+
+          const lab = document.getElementById('cutKeyLabel');
+          const it  = _currentSystem.keys[selectedIdx];
+          lab.textContent = (it && it.stamping) ? it.stamping : '';
+
+          qty.value = '1';
+          m.hidden = false;
+
+          function closeCut(){
+            m.hidden = true;
+            go.onclick = null;
+            no.onclick = null;
+            bd.onclick = null;
+          }
+
+          no.onclick = closeCut;
+          bd.onclick = closeCut;
+
+          go.onclick = ()=>{
+            const v = Number(qty.value);
+            if (!Number.isFinite(v)) { closeCut(); return; }
+            ensureKeysArray();
+            _currentSystem.keys[selectedIdx].qty =
+              (_currentSystem.keys[selectedIdx].qty||0) + Math.floor(v);
+            if (_currentSystem.keys[selectedIdx].qty < 0)
+              _currentSystem.keys[selectedIdx].qty = 0;
+            persistCurrentSystem();
+            closeCut();
+            renderKeysView();
+          };
+        };
+
+        document.getElementById('keyDelete').onclick = ()=>{
+          if (selectedIdx < 0) return;
+          const it = _currentSystem.keys[selectedIdx];
+          if (!it) return;
+
+          const m   = document.getElementById('deleteKeyModal');
+          const ln  = document.getElementById('deleteKeyLine');
+          const go  = document.getElementById('deleteKeyConfirm');
+          const no  = document.getElementById('deleteKeyCancel');
+          const bd  = document.getElementById('deleteKeyBackdrop');
+
+          ln.textContent = (it.stamping||'') + ' – ' + (it.description||'');
+          m.hidden = false;
+
+          function closeDel(){
+            m.hidden = true;
+            go.onclick = null;
+            no.onclick = null;
+            bd.onclick = null;
+          }
+
+          no.onclick = closeDel;
+          bd.onclick = closeDel;
+
+          go.onclick = ()=>{
+            _currentSystem.keys.splice(selectedIdx,1);
+            if (_currentSystem.keys.length <= 0) {
+              selectedIdx = -1;
+              _keysSelectedIdx = -1;
+            } else if (selectedIdx >= _currentSystem.keys.length) {
+              selectedIdx = _currentSystem.keys.length - 1;
+              _keysSelectedIdx = selectedIdx;
+            }
+            persistCurrentSystem();
+            closeDel();
+            renderKeysView();
+          };
+        };
+      }
+
 
     // ---- Doors view (grid + CRUD + Keying) ----
     let _editingDoorIndex = null;
