--- a/index.html
+++ b/index.html
@@ -2929,7 +2929,7 @@ ${pad(beforeLine2,22)}${afterLine2}`;
 
         // BOX 1: scrollable keys window (own card, like the top content card)
         html += '<div class="card" style="padding:12px;margin:12px 0;">';
-        html += '  <div style="max-height:60vh;overflow:auto;">';
+        html += '  <div style="max-height:55vh;overflow:auto;">';
         html += '    <div class="keygrid">';
         html += '      <div class="hdr muted">Stamping</div>';
         html += '      <div class="hdr muted">Description</div>';
@@ -3529,36 +3529,46 @@ ${pad(beforeLine2,22)}${afterLine2}`;
     }
 
 
-    function renderDoorsView(){
-      if (!_currentSystem) return;
-      ensureDoorsArray();
-      const content = document.getElementById('systemContent');
-      if (!content) return;
+          function renderDoorsView(){
+        if (!_currentSystem) return;
+        ensureDoorsArray();
+        const content = document.getElementById('systemContent');
+        if (!content) return;
 
-      const rows = _currentSystem.doors;
+        const rows = _currentSystem.doors;
 
-      let html = '';
-      html += '<div style="max-height:60vh;overflow:auto;">';
-      html += '  <div class="doorgrid">';
-      html += '    <div class="hdr muted">Stamping</div>';
-      html += '    <div class="hdr muted">Description</div>';
-      html += '    <div class="hdr muted">Part Number</div>';
-      html += '  </div>';
-      html += '  <div id="doorRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
-      html += '</div>';
+        let html = '';
+        html += `
+          <div style="background:transparent;border:0;box-shadow:none;padding:0;min-height:0;">
+        `;
 
+        html += '<div class="card" style="padding:12px;margin:12px 0;">';
+        html += '  <div style="max-height:55vh;overflow:auto;">';
+        html += '    <div class="doorgrid">';
+        html += '      <div class="hdr muted">Stamping</div>';
+        html += '      <div class="hdr muted">Description</div>';
+        html += '      <div class="hdr muted">Part Number</div>';
+        html += '    </div>';
+        html += '    <div id="doorRows" style="display:flex;flex-direction:column;gap:8px;margin-top:8px;"></div>';
+        html += '  </div>';
+        html += '</div>';
 
-      html += `
-        <div class="btnbar" style="justify-content:flex-end;position:sticky;bottom:0;background:#0e0e0e;padding:12px;border-radius:12px;margin-top:12px;">
-          <button id="doorAdd">Add</button>
-          <button id="doorEdit" disabled>Edit</button>
-          <button id="doorKeying" disabled>Keying</button>
-          <button id="doorPinning" disabled>Pinning</button>
-          <button id="doorDelete" class="warn" disabled>Delete Door</button>
-        </div>
-      `;
+        html += `
+          <div class="card" style="padding:12px;margin:12px 0;">
+            <div class="btnbar" style="justify-content:flex-end;margin-top:0;">
+              <button id="doorAdd">Add</button>
+              <button id="doorEdit" disabled>Edit</button>
+              <button id="doorKeying" disabled>Keying</button>
+              <button id="doorPinning" disabled>Pinning</button>
+              <button id="doorDelete" class="warn" disabled>Delete Door</button>
+            </div>
+          </div>
+        `;
 
-      content.innerHTML = html;
+        html += '</div>';
+
+        content.innerHTML = html;
+
 
       const host = document.getElementById('doorRows');
       host.innerHTML = rows.map((d, idx)=>{
